--- a/latex/main.tex
+++ b/latex/main.tex
@@ -6,7 +6,11 @@
 
 \addcontentsline{toc}{chapter}{Indledning}
 \chapter*{Indledning}
-Udformningen af brugerinterfaces har igennem de sidste 5-10 år gennemgået en stor udvikling og er blevet en markant faktor indenfor menneske-datamaskine interaktion. Et felt så stort og bredt som brugerinterfaces kan ofte gøre brug af intuitive matematiske modeller for det menneskelige motoriske system. En sådan model blev i 1954 beskrevet af Paul M. Fitts i \cite{fitts1954} og er sidenhen blevet kendt som Fitts' Lov. Fitts baserede sin analyse på tre eksperimenter, hvor 16 personer blev bedt om at udføre forskellige fysiske, motoriske øvelser. Den opsamlede data blev brugt til at finde frem til en sværhedsgrad, \textit{}
+Udformningen af brugerinterfaces har igennem de sidste 5-10 år gennemgået en stor udvikling og er blevet en markant faktor indenfor menneske-datamaskine interaktion. Et felt så stort og bredt som brugerinterfaces kan ofte gøre brug af intuitive matematiske modeller for det menneskelige motoriske system. En sådan model blev i 1954 beskrevet af Paul M. Fitts i \cite{fitts1954} og er sidenhen blevet kendt som Fitts' Lov. Fitts baserede sin analyse på tre eksperimenter, hvor 16 personer blev bedt om at udføre forskellige fysiske, motoriske øvelser. Den opsamlede data blev brugt til at finde frem til en sværhedsgrad, \textit{Index of Difficulty}, som beskriver hvor svær en given motorisk opgave er. Sværhedsgraden blev brugt i Fitts' endelige formel til at udregne hvor lang tid en person vil bruge på en opgave af en given sværhedsgrad.
+
+Siden udgivelsen af Fitts' artikel har flere andre udgivelser foreslået ændringer, som kunne forbedre Fitts' Lov. Den første udgivelse som gerne ville ændre Fitts' Lov var \cite{welford1968}, hvor Alan T. Welford foreslog nogle teoretiske ændringer til Fitts' Lov, udfra hans observationer af Fitts' indsamlede data. Både Fitts og Welford beskrev formuleringerne udfra et rent menneskeligt motorisk synspunkt, men i slutningen af 70'erne begyndte menneske-datamaskine interaktion forskere at interessere sig for emnet, blandt andet med udgivelsen af \cite{card1978}. Siden da foreslog David E. Meyer af to omgange, \cite{meyer1988} \& \cite{meyer1990}, nogle fundamentale ændringer til den bagvedliggende model for Fitts' Lov. Dette førte til en variant af Fitts' Lov, som baserede sig på et $ID$ som indeholdte kvadratrod i stedet for den allerede kendte variant med logaritme. Meyer lavede først en række beregninger på data fra Fitts' forsøg, hvilket viste at hans formulering passede bedre på den indsamlede data. Herefter lavede han nogle simple forsøg, hvor testpersoner lavede simple håndledsbevægelser. Disse viste igen at den nye variant passede bedre til den indsamlede data.
+
+Den nyeste variant af Fitts' Lov blev udformet af Scott MacKenzie i \cite{mackenzie1992} i 1992. Denne variant er opbygget om Shannon's Sætning\cite{goldberg2015} og er siden blevet accepteret som den mest udbredte\cite{guiard2011}. MacKenzie udførte beregninger på data fra allerede udførte forsøg og viste at hans formulering ville passe bedre på de tidligere indsamlede data. På trods af at MacKenzie viste at hans formulering passede bedst på data fra tidligere forsøg, så har både \cite{drewes2010} og \cite{goldberg2015} vist at alle fire formuleringer ikke nødvendigvis passer til alle tilfælde af sværhedsgrader. Specielt noterede \cite{goldberg2015} at det kom an på sværhedsgraden, hvilken formulering der skulle bruges. MacKenzies var bedst at bruge ved høje sværhedsgrader, mens Meyers viste sig at være bedst anvendelig ved lavere sværhedsgrader.
 
 
 
