--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -243,3 +243,37 @@
   editor={F. didot}
 }
 
+@article{hong2015,
+  title={Comparison of Vertical and Horizontal Eye Movement Times in the Selection of Visual Targets by an Eye Input Device},
+  author={Hong, Seung Kweon},
+  journal={대한인간공학회지},
+  volume={34},
+  number={1},
+  pages={19--27},
+  year={2015}
+}
+
+@inproceedings{jiang2014,
+  title={Pupil dilations during target-pointing respect Fitts' Law},
+  author={Jiang, Xianta and Atkins, M Stella and Tien, Geoffrey and Zheng, Bin and Bednarik, Roman},
+  booktitle={Proceedings of the Symposium on Eye Tracking Research and Applications},
+  pages={175--182},
+  year={2014},
+  organization={ACM}
+}
+
+@book{greene2014,
+  title={An ACT-R Model of Elliptical Endpoint Error Distributions in a Mobile Touchscreen 2-D Fitts’ Law Task},
+  author={Greene, Kristen K and Gallagher, Melissa A},
+  year={2014}
+}
+
+@article{zhao2015,
+  title={Exploring and modeling unimanual object manipulation on multi-touch displays},
+  author={Zhao, Jian and Soukoreff, R William and Balakrishnan, Ravin},
+  journal={International Journal of Human-Computer Studies},
+  volume={78},
+  pages={68--80},
+  year={2015},
+  publisher={Elsevier}
+}
