update to intro and bibliography

--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -246,7 +246,7 @@
 @article{hong2015,
   title={Comparison of Vertical and Horizontal Eye Movement Times in the Selection of Visual Targets by an Eye Input Device},
   author={Hong, Seung Kweon},
-  journal={대한인간공학회지},
+  journal={ESK},
   volume={34},
   number={1},
   pages={19--27},
