--- a/latex/main.tex
+++ b/latex/main.tex
@@ -550,7 +550,7 @@ Vi har derfor forsøgt at fjernet alle datapunkter, som afviger med mere end 3 g
 \end{minipage}
 
 \newpage
-På baggrund af de affine linjers overenstemmelse med størstedelen af datapunkterne fra det kontrollerede eksperiment har vi konkluderet, at det tilsvarende vil gøre sig gældende for vores ukontrollerede data, og derved godt kan danne grundlag for en analyse af de fire formuleringer af Fitts' lov. Vi vil dog analysere datasættet af to omgange, med og uden filtrerede data. Da forskellen kan have en hvis betydning på de fire formuleringers tilpasning til datasættet.
+På baggrund af de affine linjers overenstemmelse med størstedelen af datapunkterne fra det kontrollerede eksperiment har vi konkluderet, at det tilsvarende vil gøre sig gældende for vores ukontrollerede data, og derved godt kan danne grundlag for en analyse af de fire formuleringer af Fitts' lov. Vores analyse vil basere sig på et filtreret datasæt ved den oven nævnte $\sigma$ metode, så eventuelle perifære data ikke medtages.
 
 \begin{minipage}{\linewidth}
 	\begin{minipage}[b]{.50\linewidth}
