--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -277,3 +277,10 @@
   year={2015},
   publisher={Elsevier}
 }
+
+@article{karafillis2012,
+  title={When You Shouldn't Use Fitts's Law To Measure User Experience},
+  author={Karafillis, Anastasios},
+  journal={uxdesign. smashingmagazine. com},
+  year={2012}
+}
