--- a/latex/main.tex
+++ b/latex/main.tex
@@ -590,18 +590,15 @@ Det er disse modeller som vores pegeopgaveanalyse vil tage udgangspunkt i. Ud fr
 \end{minipage}
 
 \newpage
-\addcontentsline{toc}{subsection}{R-kode}
-\subsection*{R-kode}
-Listing \ref{lst:filter} viser hvordan vi udfiltrerer alle data som ligger udenfor tre standardafvigelser, hvilket for normaltfordelt data vil betyde at vi beholder $99.7\%$ af vores data.
-\lstinputlisting[label={lst:filter}, caption=Filter til data, language=R, firstline=24, lastline=26]{main.r}
-Den relevante R-kode som bliver brugt til analysen, er vist i listing \ref{lst:function}
-\lstinputlisting[label={lst:function}, caption=Funktion til modelanalyse, language=R, firstline=33, lastline=51]{main.r}
-\lstinputlisting[label={lst:analysis}, caption=Kald til analysefunktion, language=R, firstline=53, lastline=62]{main.r}
-Som det ses af listing \ref{lst:function}, udregner vi først $ID$ for vores data, baseret på de foruddefinerede værdier af $A$ og $W$. Herefter bruger vi $lm()$ til at fitte modellen til vores data, hvorefter vi plotter dataen og modellen i et residualplot.\\
-
 \addcontentsline{toc}{subsection}{AIC-analyse}
 \subsection*{AIC-analyse}
-Figur \ref{tab:table_analysis_aic1} viser AIC for de fire modeller. De fire modellers AIC er høje, men det er underordnet da det afhænger af antallet af datapunkter, Det der derimod betyder noget er deres indbyrdes forhold. Det ses af tabellen at Meyer's har den laveste AIC og derfor er den model der passer bedst til den indsamlede data. MacKenzie's og Fitt's følger herefter med lidt højere AIC værdier, mens Welford's er den klart dårligste af de fire modeller. Vi har valgt at sætte Meyers AIC værdi som nulpunkt og så beregne forskellen til de andre herfra. 
+AIC anslår kvaliteten af hver model, relativt til hver af de andre modeller. Hvilket vil sige at AIC ikke kan sige noget om kvaliteten af en model I absolut forstand, og derfor ikke kan vurdere hvor godt en model passer på dataen - kun den relative kvalitet af hver model.
+
+Tabel \ref{tab:table_analysis_aic1} viser AIC-værdierne, og den relative forskel i mellem dem, for de fire modeller. Eftersom den absolute AIC-værdi ikke I sig selv siger noget, kigger vi kun på forskellen mellem dem.
+
+Det ses af tabel \ref{tab:table_analysis_aic1} at vi bruger modellen med den laveste værdi, altså Meyer's, som nulpunkt. Det ses deraf at forskellen mellem de tre modeller med den laveste AIC-værdi (Meyer, MacKenzie, Fitts) ikke er betydelig, I forhold til forskellen mellem disse og Welford's model.
+
+Det vi kan uddrage af denne analyse, er at vi har med nogle meget ensartede modeller at gøre, I forhold til hvordan de passer på dataen, dog med undtagelse af Welford's model.
 
 \begin{table}[h]
 \centering
