--- a/latex/main.tex
+++ b/latex/main.tex
@@ -14,7 +14,7 @@ I 1992 udgav Scott MacKenzie \cite{mackenzie1992}, hvori han beskrev en ny varia
 
 Der har i løbet af de seneste to år været en stigende interesse for Fitts' Lov, da flere forskere er begyndt at se på om den også kan bruges ved touch-skærme eller øje bevægelse \cite{hong2015} \cite{zhao2015} \cite{jiang2014} \cite{greene2014}. Mens dette er interessante områder at bruge Fitts' Lov på, så er der stadig et stort behov for at dokumentere, at Fitts' Lov, eller en af varianterne, rent faktisk passer til brugergrænsefladeinteraktion. Denne rapports mål er at indsamle og analysere data for bevægelser med mus eller touchpad. Vi vil genskabe tidligere udførte forsøg af \cite{accot1997} og \cite{goldberg2015}. Til udførelsen af forsøgene vil vi både lave et kontrolleret laboratorieeksperiment og et ukontrolleret eksperiment som foregår online. Vi vil analysere den indsamlede data ved brug af de fire allerede kendte formuleringer, men vil også kigge på brugernes bevægelsesbaner, fart- og hastighedsprofiler. Dette er interessante områder, da der ikke er lavet nogle større afrapporteringer herom, hvilket også er noteret af \cite{goldberg2015}.\\
 
-Fitts' Lov har stor udbredelse indenfor menneske-datamaskine interaktion og bruges mest til at forbedre brugergrænseflader. Som \cite{karafillis2012} notere, så kan Fitts' Lov bruges som en rettesnor, når man designer brugergrænseflader. Dette kunne f.eks. være til at finde størrelser og placeringer af knapper. Det er i den forbindelse vigtigt at have kendskab til ``prime pixels'', som er kanterne af skærmen og markørens nuværende position. Disse pixels har et meget lavt $ID$ og kan indkoorpereres som centrale dele af design. Eksempler på dette er Windows' højreklik funktionalitet og `Start'-knap. Fitts' Lov er sågar brugbar, som en modificeret version, i drop-down menuer, som beskrevet af \cite{accot1997}.
+Fitts' Lov har stor udbredelse indenfor menneske-datamaskine interaktion og bruges mest til at forbedre brugergrænseflader. Som \cite{karafillis2012} noterer, så kan Fitts' Lov bruges som en rettesnor, når man designer brugergrænseflader. Dette kunne f.eks. være til at finde størrelser og placeringer af knapper. Det er i den forbindelse vigtigt at have kendskab til ``prime pixels'', som er kanterne af skærmen og markørens nuværende position. Disse pixels har et meget lavt $ID$ og kan indkoorpereres som centrale dele af design. Eksempler på dette er Windows' højreklik funktionalitet og `Start'-knap. Fitts' Lov er sågar brugbar, som en modificeret version, i drop-down menuer, som beskrevet af \cite{accot1997}.
 
 \section*{Noter}
 Længere indledning! - meget længere.
