--- a/latex/main.tex
+++ b/latex/main.tex
@@ -726,28 +726,36 @@ Den kvalitative analyse bygger på 57 tilfældigt crowdsourcingdeltagerne, hvilk
 
 Vi har observeret at deltagerne tager en stor underbevægelse, eventuelt opfulgt af mindre korrigerende underbevægelser. Typisk vil der for muse-brugerne være en korrigerende underbevægelse, mens touchpad-brugerne ofte bruger flere korrigerende underbevægelser. Generelt har muse-brugerne også mindre udsving i deres bevægelsesbaner end touchpad-brugerne. Dertil var der flere deltagere som startede enkelte baner, med at bevæge pegeredskabet i en forkert retning.
 
-\addcontentsline{toc}{subsection}{Kvantitativ analyse}
-\subsection*{Kvantitativ analyse}
-Dette afsnit og tilhørende figurer er tilføjet så du ved, hvor langt i processen med hastighedsprofilerne vi er.
-
-Vi har lavet fartprofiler for testdeltagerne, set i figur \ref{fig:plot_speed_overall}, som viser hvordan testdeltagerne foretager en hovedbevægelse, og herefter én eller flere koregerende bevægelser - vi har også individuelle plots hvoraf det måske er lidt tydligere.
-
-Vi har lavet hastighedsprofiler for testdeltagere, indtilvidere kun én enkelt opgave af gangen \ref{fig:plot_velocity_random} og kun i forhold til den reelle retning, dvs. vi mangler stadig hastighedsprofiler imod målet.
-
 \begin{minipage}{\linewidth}
-	\begin{minipage}{\linewidth}
+	\begin{minipage}{.5\linewidth}
 		\centering
-		\includegraphics[width=.5\linewidth]{images/plots/plot_analysis_qualitative}
+		\includegraphics[width=\linewidth]{images/plots/plot_analysis_qualitative}
 		\captionof{figure}{Plot over alle bevægelsesbaner lavet af en enkelt testdeltager under udførslen af denne deltagers pegeopgaver.}
 		\label{fig:movement_random_person}
 	\end{minipage}
-	\begin{minipage}{\linewidth}
+	\begin{minipage}{.5\linewidth}
 		\centering
 		\includegraphics[width=\linewidth]{images/plots/plot_speed_individual}
 		\captionof{figure}{Fire plots over fartprofilerne for fire tilfældige pegeopgaver fra en tilfældig testdeltager}
 		\label{fig:plot_speed_overall}
 	\end{minipage}
 \end{minipage}
+
+\addcontentsline{toc}{subsection}{Kvantitativ analyse}
+\subsection*{Kvantitativ analyse}
+For at kunne analysere de indsamlede data, har vi valgt at lave nogle beregninger på vores data som kan bruges til at lave en kvantitativ analyse. ud fra de indsamlede data har vi udregnet farten I de individuelle punkter i vores data, som vi har brugt til at illustrere fartudviklingen over fire tilfældigt udvalgte tests som kan ses på figur \ref{fig:plot_speed_overall}.
+
+Det ses på figur \ref{fig:plot_speed_overall} at der er en tendens til at farten har én primær stigning omkring midten af distancen, som kan beskrives som en hovedbevægelse, hvori der accelereres mod målet - dette tydeliggøres af figur \ref{fig:plot_velocity_individual} som illustrerer hastighedsprofilen for en anden tilfældig testdeltager. Der ses også en tendens til nogle at testpersonerne laver små hastighedsstigninger efter hovedstigningen, hvilket illustrerer de korrigerende underbevægelser som beskrevet tidligere i rapporten.
+
+
+
+
+%Dette afsnit og tilhørende figurer er tilføjet så du ved, hvor langt i processen med hastighedsprofilerne vi er.
+
+%Vi har lavet fartprofiler for testdeltagerne, set i figur \ref{fig:plot_speed_overall}, som viser hvordan testdeltagerne foretager en hovedbevægelse, og herefter én eller flere koregerende bevægelser - vi har også individuelle plots hvoraf det måske er lidt tydligere.
+
+%Vi har lavet hastighedsprofiler for testdeltagere, indtilvidere kun én enkelt opgave af gangen \ref{fig:plot_velocity_random} og kun i forhold til den reelle retning, dvs. vi mangler stadig hastighedsprofiler imod målet.
+
 \begin{minipage}{\linewidth}
 	\begin{minipage}{.5\linewidth}
 		\includegraphics[width=\linewidth, trim = 20cm 0cm 20cm 0cm, clip]{images/plots/plot_velocity_individual}
