--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -284,3 +284,23 @@
   journal={uxdesign. smashingmagazine. com},
   year={2012}
 }
+
+@article{looser2005,
+  title={On the validity of using First-Person Shooters for Fitts' law studies},
+  author={Looser, Julian and Cockburn, Andy and Savage, Joshua},
+  journal={People and Computers XIX},
+  volume={2},
+  pages={33--36},
+  year={2005}
+}
+
+@inproceedings{epps1986,
+  title={Comparison of six cursor control devices based on Fitts' law models},
+  author={Epps, Brian W},
+  booktitle={Proceedings of the Human Factors and Ergonomics Society Annual Meeting},
+  volume={30},
+  number={4},
+  pages={327--331},
+  year={1986},
+  organization={SAGE Publications}
+}
