--- a/latex/main.tex
+++ b/latex/main.tex
@@ -776,11 +776,11 @@ Vi vil i dette afsnit diskutere både vores forsøgsopstilling og vores analyse.
 
 \addcontentsline{toc}{section}{Forsøgsopstilling}
 \section*{Forsøgsopstilling}
-Vores valg af opslagssteder i det ukontrolleret forsøg kan have haft en indflydelse på den indsamlede data. Vi valgte at bruge Reddit, hvilket giver os en meget specifik målgruppe, da den typiske Reddit bruger er .......! Dette er også udslagsgivende i vores indsamlede data, hvor gennemsnitsalderen er 24.5 år og 233 ud af 257 er mænd. Det er påvist af \cite{looser2005} at det ikke gør en stor forskel at deltagere bruger meget tid på videospil. Derfor burde det ikke have nogen nævneværdi indflydelse på vores forsøg, at $22\%$ af vores testdeltagere angav at de spillede videospil mellem 15 og 40 timer om ugen.
+Vores valg af opslagssteder i det ukontrollerede forsøg kan have haft en indflydelse på den indsamlede data. Vi valgte at bruge Reddit, hvilket giver os en meget specifik målgruppe, da den typiske Reddit-bruger er .......! Dette er også udslagsgivende i vores indsamlede data, hvor gennemsnitsalderen er 24.5 år og 233 ud af 257 er mænd. Det er påvist af \cite{looser2005} at det ikke gør en stor forskel at deltagere bruger meget tid på videospil. Derfor burde det ikke have nogen nævneværdi indflydelse på vores forsøg, at $22\%$ af vores testdeltagere angav at de spillede videospil mellem 15 og 40 timer om ugen.
 
 Det er derimod væsentligt at se på hvilket pegeredskab testdeltagerne brugte, da der kan være forskelle på tiden, når personer bruger f.eks. mus i forhold til touchpad \cite{epps1986}. I vores data brugte 160 personer mus, mens 96 brugte touchpad. På trods af at der er flest der brugte mus, så er det stadig vigtigt at huske at cirka $35\%$ brugte touchpad, hvilket vil give dem et dårligere resultat.
 
-Vores testdata kom ikke kun fra Reddit, men også fra opslag på vores Facebook-væg. Dette indfører også et bias som kan være væsentligt, da det er vores familie og venner vi derved bruger. Familie og venner har ofte hørt om projektet før og kan derfor have en forventning om hvad der skal ske og hvad de burde gøre. Da både Reddit og Facebook hovedsageligt bruges af yngre personer, så vil vores målgruppe også være begrænset heraf. Vi har f.eks. kun ni testpersoner som er ældre end 40. 
+Vores testdata kom ikke kun fra Reddit, men også fra opslag på vores Facebook-væg. Dette medfører også et bias som kan være væsentligt, da det er vores familie og venner vi derved bruger. Familie og venner har ofte hørt om projektet før og kan derfor have en forventning om hvad der skal ske og hvad de burde gøre. Da både Reddit og Facebook hovedsageligt bruges af yngre personer, så vil vores målgruppe også være begrænset heraf. Vi har f.eks. kun ni testpersoner som er ældre end 40. 
 
 
 Ukontrolleret forsøg
