--- a/latex/main.tex
+++ b/latex/main.tex
@@ -745,16 +745,9 @@ Vi har observeret at deltagerne tager en stor underbevægelse, eventuelt opfulgt
 \subsection*{Kvantitativ analyse}
 For at kunne analysere de indsamlede data, har vi valgt at lave nogle beregninger på vores data som kan bruges til at lave en kvantitativ analyse. ud fra de indsamlede data har vi udregnet farten I de individuelle punkter i vores data, som vi har brugt til at illustrere fartudviklingen over fire tilfældigt udvalgte tests som kan ses på figur \ref{fig:plot_speed_overall}.
 
-Det ses på figur \ref{fig:plot_speed_overall} at der er en tendens til at farten har én primær stigning omkring midten af distancen, som kan beskrives som en hovedbevægelse, hvori der accelereres mod målet - dette tydeliggøres af figur \ref{fig:plot_velocity_individual} som illustrerer hastighedsprofilen for en anden tilfældig testdeltager. Der ses også en tendens til nogle at testpersonerne laver små hastighedsstigninger efter hovedstigningen, hvilket illustrerer de korrigerende underbevægelser som beskrevet tidligere i rapporten.
+Det ses på figur \ref{fig:plot_speed_overall} at der er en tendens til at farten har én primær stigning omkring midten af distancen, som kan beskrives som en hovedbevægelse, hvori der accelereres mod målet - dette tydeliggøres af figur \ref{fig:plot_velocity_individual} som illustrerer hastighedsprofilen for en anden tilfældig testdeltager. Der ses også en tendens til nogle at testpersonerne laver små hastighedsstigninger efter hovedstigningen, hvilket illustrerer de korrigerende underbevægelser som beskrevet tidligere i rapporten og i \cite{meyer1988}.\\
 
-
-
-
-%Dette afsnit og tilhørende figurer er tilføjet så du ved, hvor langt i processen med hastighedsprofilerne vi er.
-
-%Vi har lavet fartprofiler for testdeltagerne, set i figur \ref{fig:plot_speed_overall}, som viser hvordan testdeltagerne foretager en hovedbevægelse, og herefter én eller flere koregerende bevægelser - vi har også individuelle plots hvoraf det måske er lidt tydligere.
-
-%Vi har lavet hastighedsprofiler for testdeltagere, indtilvidere kun én enkelt opgave af gangen \ref{fig:plot_velocity_random} og kun i forhold til den reelle retning, dvs. vi mangler stadig hastighedsprofiler imod målet.
+På figur \ref{fig:plot_velocity_individual} og \ref{fig:plot_velocity_individual_target} har vi to vektorplots som viser en enkelt opgave fra en tilfældig testperson, hvor vektorerne illustrerer hhv. hastigheden og hastigheden mod målet, i hvert punkt. Disse hastighedsprofiler viser os hvordan testpersonen har justeret sin hastighed under en test, og .....
 
 \begin{minipage}{\linewidth}
 	\begin{minipage}{.5\linewidth}
