--- a/latex/main.tex
+++ b/latex/main.tex
@@ -604,7 +604,7 @@ Det vi kan uddrage af denne analyse, er at vi har med nogle meget ensartede mode
 \begin{table}[h]
 \centering
 \begin{tabular}{lll}
-Model 	  & AIC værdi & Forskel\\\hline
+Model 	  & AIC-værdi & Forskel\\\hline
 Meyer 	  & 92728.38 & 0 \\
 Mackenzie & 92763.02 & 34.64 \\
 Fitts 	  & 92804.17 & 75.79 \\
@@ -658,7 +658,7 @@ AIC analysen viser at Fitts' oprindelig formulering klarer sig bedst, dog er de 
 \begin{table}[h]
 \centering
 \begin{tabular}{lll}
-Model & AIC værdi & Forskel\\\hline
+Model & AIC-værdi & Forskel\\\hline
 Fitts & 17668.53 & 0\\
 Mackenzie & 17668.56 & 0.3 \\
 Accot \& Zhai & 17669.07 & 0.54\\
