--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1,8 +1,14 @@
 \input{preface.tex}
 
-%\begin{abstract}
-
-%\end{abstract}
+\begin{abstract}
+\begin{itemize}
+	\item Fylder 10-20 linjer
+	\item Indeholder en beskrivelse af opgavens formål/proplemstilling, anvendte metoder, resultater og konklusioner
+	\item Ikke indeholder citater eller kildehenvisninger
+	\item Skrives i ét afsnit
+	\item Laves efter opgaven er skrevet
+\end{itemize}
+\end{abstract}
 
 \addcontentsline{toc}{chapter}{Indledning}
 \chapter*{Indledning}
